fixed serious issue in ScanCompilationUnit (initializer of fields), adapted lombok tests